--- a/game.css
+++ b/game.css
@@ -2,32 +2,19 @@ body {
     background-image: url("Login page.gif");
     background-position: center;
     background-size: cover;
-    align-items: center;
 }
-input {
-    display: inline-block;
-    margin: 5px;
+label { 
+    color: lightsalmon;
 }
-#word
-{
-	width: 60%;
-}
-#word_display
-{
-	letter-spacing: 5px;
+h4 {
+    color: red;
 }
 #output
 {
 background: white;
 border-radius: 10px;
-border-top: 10px solid #AA4465;
+border-top: 10px solid royalblue;
 padding: 10px;
 float: none;
 text-align: left;
-}
-.container {
-    display: flex;
-}
-center {
-    margin-left: 200px;
 }
